# FIX

./: .gitignore  CLAUDE.md  PROJECT_v1.md  README.md  pyproject.toml
.claude/: settings.local.json
backend/: config.py  fix_client.py  fix_dictionary.py  fix_parser.py  main.py  websocket_manager.py
backend/routes/: instruments.py  market_data.py
backend/tests/: conftest.py  test_fix_dictionary.py  test_fix_parser.py  test_routes.py  test_websocket_manager.py
docs/superpowers/plans/: 2026-03-16-fix-trading-platform.md  2026-03-17-v2-order-entry.md
frontend/: jest.config.ts  package-lock.json  package.json
frontend/src/__tests__/: FIXInspector.test.tsx  OrderBook.test.tsx  Watchlist.test.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ConnectionStatus.tsx  FIXInspector.tsx  InstrumentSearch.tsx  MaintenanceBanner.tsx  OrderBook.tsx  PriceDisplay.tsx  Watchlist.tsx
frontend/src/hooks/: useMarketData.ts  useWebSocket.ts
frontend/src/lib/: api.ts  fixDictionary.ts  types.ts
