[project]
name = "fix"
version = "0.1.0"
description = "FIX Trading Platform — Binance testnet market data viewer"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "binance-fix-connector>=1.2.0",
    "cryptography>=46.0.5",
    "simplefix>=1.0.17",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]
